# vae_AD

./: .gitignore  README.md  environment_notebook07.yml  pyproject.toml
configs/: conda-explicit.txt  environment.from-history.yml  environment.lock.portable.yml  environment.lock.yml  vae_ad.conda-explicit.txt  vae_ad.from-history.yml  vae_ad.lock.yml
data/: README.md  ResumenRespuestasBasico.csv  SubjectsData_AAL3_COVID.csv  SubjectsData_AAL3_procesado2.csv
docs/: CHANGELOG_inference_covid.md  data_flow_inference_covid_notebook.md  interpretability_pipeline.md  repo_dataflow.md
notebooks/: 00_qc_fmri_bold.ipynb  01_feature_extraction_manual.ipynb  01_feature_extraction_manual_COVID.ipynb  02_run_ablation.ipynb  03_a_inference_covid_from_adcn.ipynb  03_a_inference_covid_from_adcn.py  03_b_transfer_v1_audit.ipynb  03_b_unified_transfer_and_probing_audit.ipynb  03_run_vae_clf_ad_best.ipynb  03_toy_example_betavae.ipynb  03_toy_example_betavae_ad_cn.ipynb  03_toy_example_betavae_gen.ipynb  03_training_qc_paper.ipynb  04_a_fatigue_connectome_baselines.ipynb  04_b_fatigue_hardening.ipynb  04_training_qc_paper.ipynb  05_run_interpretability_ad.ipynb  06_further_analysis.ipynb  07_information_theory.ipynb  07_information_theory_changelog.md
results/: README.md
scripts/: _gen_04b_hardening_notebook.py  _gen_07_it_notebook.py  _patch_notebook_04a.py  _refactor_notebook_03a.py  _regenerate_decision_artifacts.py  ablation_canales.py  activate_dev.sh  analysis_covid_paper_fixes.py  feature_extraction_manual.py  feature_extraction_manual_COVID.py  inference_covid_from_adcn.py  (+6 more)
(+36 files in other folders)
